<resources>
    <string name="app_name">My Workout</string>
    <string name="loading_data">Chargement des données&#8230;</string>
    <string name="workouts">Sessions</string>
    <string name="routine">Programme</string>
    <string name="routines">Programmes</string>
    <string name="exercise">Exercice</string>
    <string name="exercise_and_code">Exercice %1$s</string>
    <string name="exercises">Exercices</string>
    <string name="more">Plus</string>
    <string name="reload">Recharger</string>
    <string name="parameters">Paramètres</string>
    <string name="stopwatch">Chronomètre</string>

    <string name="intervalometer">Intervalomètre</string>
    <string name="interval">Intervalle</string>
    <string name="reset">R.A.Z.</string>
    <string name="nb_lap_performed">Nb de séries effectuées :</string>

    <string name="menu_workouts">Sessions</string>
    <string name="menu_exercises">Exercices</string>
    <string name="complete_history">Historique complet de l\'exercice</string>
    <string name="routine_session_list">Liste des sessions</string>
    <string name="from_to">Du %1$s au %2$s</string>
    <string name="exercise_difficulty_label">Difficulté</string>
    <string name="exercise_best_performance_label">Record</string>

    <string name="email">Email</string>
    <string name="export">Exporter</string>
    <string name="export_label">Exporter les sessions et envoyer par email</string>
    <string name="file_created">Fichier créé</string>
    <string name="file_sent">Fichier envoyé par email</string>
    <string name="email_subject">Fichier de sauvegarde de sessions</string>

    <string name="routine_L1_P1">Niveau 1 - programme 1</string>
    <string name="routine_L1_P2">Niveau 1 - programme 2</string>
    <string name="routine_L2">Niveau 2</string>
    <string name="routine_L3">Niveau 3</string>
    <string name="routine_L4">Niveau 4</string>
    <string name="routine_L5">Niveau 5</string>
    <string name="routine_L6">Niveau 6</string>
    <string name="routine_L7">Niveau 7</string>
    <string name="routine_L8">Niveau 8</string>
    <string name="routine_L9">Niveau 9</string>
    <string name="routine_L10">Niveau 10</string>
    <string name="routine_L11">Niveau 11</string>
    <string name="routine_L12">Niveau 12</string>

    <string name="ex_A">Pectoraux, triceps, épaules</string>
    <string name="ex_A1">Pectoraux, triceps, épaules</string>
    <string name="ex_A2">Pectoraux, épaules, triceps</string>
    <string name="ex_A3">Milieu de la poitrine, triceps</string>
    <string name="ex_A4">Milieu de la poitrine, triceps</string>
    <string name="ex_A5">Milieu de la poitrine, triceps</string>
    <string name="ex_A6">Milieu de la poitrine, triceps</string>
    <string name="ex_A7">Pectoraux, triceps, épaules</string>
    <string name="ex_A8">Pectoraux (partie basse)</string>
    <string name="ex_A9">Triceps, pectoraux (partie centrale), épaules</string>
    <string name="ex_A10">Epaules, pectoraux, triceps</string>
    <string name="ex_A11">Epaules, pectoraux, triceps</string>
    <string name="ex_A12">Pectoraux (partie centrale), triceps, épaules</string>
    <string name="ex_B">Pectoraux (partie latérale haute), épaules, triceps</string>
    <string name="ex_B1">Pectoraux (partie latérale haute), épaules, triceps</string>
    <string name="ex_B2">Pectoraux, épaules</string>
    <string name="ex_C">Milieu du dos, biceps</string>
    <string name="ex_C1">Milieu du dos, biceps</string>
    <string name="ex_C2">Milieu du dos, biceps</string>
    <string name="ex_C3">Milieu du dos, biceps</string>
    <string name="ex_C4">Epaisseur du dos, biceps</string>
    <string name="ex_C5">Epaisseur du dos, biceps</string>
    <string name="ex_C6">Epaisseur du dos, biceps</string>
    <string name="ex_C7">Epaisseur du haut du dos</string>
    <string name="ex_C8">Epaisseur du haut du dos</string>
    <string name="ex_C9">Epaisseur du haut du dos</string>
    <string name="ex_D">Triceps</string>
    <string name="ex_Eg">Cuisses, fessiers</string>
    <string name="ex_Ed">Cuisses, fessiers</string>
    <string name="ex_E1g">Cuisses, fessiers</string>
    <string name="ex_E1d">Cuisses, fessiers</string>
    <string name="ex_E2g">Cuisses, fessiers</string>
    <string name="ex_E2d">Cuisses, fessiers</string>
    <string name="ex_E3d">Cuisses, fessiers</string>
    <string name="ex_E3g">Cuisses, fessiers</string>
    <string name="ex_E4">Cuisses, fessiers</string>
    <string name="ex_E5">Cuisses, fessiers</string>
    <string name="ex_E6">Cuisses, fessiers</string>
    <string name="ex_E7">Cuisses, fessiers</string>
    <string name="ex_F">Cuisses, mollets</string>
    <string name="ex_F1">Cuisses, mollets</string>
    <string name="ex_F2">Cuisses, mollets</string>
    <string name="ex_F3">Cuisses, mollets</string>
    <string name="ex_G">Abdominaux partie haute</string>
    <string name="ex_H">Abdominaux partie basse</string>
    <string name="ex_I">Largeur du dos</string>
    <string name="ex_I1">Largeur du dos</string>
    <string name="ex_I2">Largeur du dos</string>
    <string name="ex_I3">Dos, bras</string>
    <string name="ex_I4">Largeur du dos</string>
    <string name="ex_I5">Dos, bras</string>
    <string name="ex_I6">Epaisseur du dos</string>
    <string name="ex_I7">Largeur du dos</string>
    <string name="ex_I8">Epaisseur du haut du dos</string>
    <string name="ex_J">Epaules, partie supérieure des pectoraux</string>
    <string name="ex_J1">Epaules, partie supérieure des pectoraux</string>
    <string name="ex_J2">Epaules, partie supérieure des pectoraux</string>
    <string name="ex_J3">Epaules, partie supérieure des pectoraux</string>
    <string name="ex_K">Triceps</string>
    <string name="ex_K1">Triceps</string>
    <string name="ex_K2">Triceps</string>
    <string name="ex_K3">Triceps</string>
    <string name="ex_L">Pectoraux, épaules, triceps</string>
    <string name="ex_M">Bas du dos</string>
    <string name="ex_M1">Bas du dos</string>
    <string name="ex_N">Obliques</string>
    <string name="ex_N1">Obliques</string>
    <string name="ex_O">Abdominaux, obliques</string>
    <string name="ex_P">Abdominaux</string>
    <string name="ex_Q">Epaules, triceps, pectoraux (partie latérale haute)</string>
    <string name="ex_Q1">Epaules, triceps, pectoraux (partie latérale haute)</string>
    <string name="ex_Q2">Epaules, triceps, pectoraux (partie latérale haute)</string>
    <string name="ex_R">Trapèzes, cou</string>
    <string name="ex_S">Cou</string>
    <string name="ex_T">Obliques, abdominaux</string>
    <string name="ex_U">Abdominaux, souplesse de la colonne vertébrale</string>
    <string name="ex_V">Muscles de la taille, souplesse de la colonne vertébrale</string>
    <string name="ex_W">Mollets</string>
    <string name="ex_X">Muscles de la taille, souplesse de la colonne vertébrale</string>
    <string name="ex_Y">Cou</string>
    <string name="ex_Z">Souplesse de la colonne vertébrale</string>

</resources>
