<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.chrono.ChronometerActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/titleChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        app:layout_constraintStart_toStartOf="@id/titleChronometer"
        app:layout_constraintTop_toBottomOf="@+id/titleChronometer"
        android:layout_marginTop="8dp"
        android:textSize="50dp" />

    <ImageButton
        android:id="@+id/button_chrono_play"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_play_black_32dp"
        app:layout_constraintStart_toEndOf="@id/chronometer"
        app:layout_constraintBottom_toBottomOf="@id/chronometer"
        android:layout_marginStart="16dp" />

    <ImageButton
        android:id="@+id/button_chrono_stop"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_stop_black_32dp"
        app:layout_constraintStart_toEndOf="@id/button_chrono_play"
        app:layout_constraintBottom_toBottomOf="@id/button_chrono_play"
        android:layout_marginStart="16dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chronometer"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/titleIntervalometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intervalometer"
        android:textSize="@dimen/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/titleInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interval"
        app:layout_constraintStart_toStartOf="@id/titleIntervalometer"
        app:layout_constraintTop_toBottomOf="@+id/titleIntervalometer"
        android:layout_marginTop="32dp" />

    <Chronometer
        android:id="@+id/interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        app:layout_constraintStart_toEndOf="@id/titleInterval"
        app:layout_constraintBottom_toBottomOf="@id/titleInterval"
        android:layout_marginStart="16dp"
        android:textSize="30dp" />

    <ImageButton
        android:id="@+id/button_interval_plus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_add_circle_outline_black_24dp"
        app:layout_constraintStart_toEndOf="@id/interval"
        app:layout_constraintBottom_toBottomOf="@id/interval"
        android:layout_marginStart="12dp" />

    <ImageButton
        android:id="@+id/button_interval_minus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_remove_circle_outline_black_24dp"
        app:layout_constraintStart_toEndOf="@id/button_interval_plus"
        app:layout_constraintBottom_toBottomOf="@id/button_interval_plus"
        android:layout_marginStart="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>